...
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toStartOf="@+id/layout_score"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title">

                    <TextView
                        android:id="@+id/tv_release_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/font_md" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/loading"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/font_nm" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_studio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/loading"
                    android:textColor="@color/gray_dark"
                    app:layout_constraintEnd_toStartOf="@+id/layout_score"
...
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_title">

                    <TextView
                        android:id="@+id/tv_score_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_number"
                        android:textAlignment="center"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/font_md"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_score_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="0dp"
                        android:text="@string/loading_number"
                        android:textAlignment="center"
                        android:textColor="@color/orange"
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textColor="@color/gray_dark"
                    android:layout_marginHorizontal="16dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/tv_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textColor="@color/gray_dark"
                    android:layout_below="@+id/tv_type"
                    android:layout_marginHorizontal="16dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_genre"
                    style="@style/RecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_runtime"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"/>

                <TextView
                    android:id="@+id/tv_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_nm"
                    android:layout_below="@+id/rv_genre"
...
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <include layout="@layout/shimmer_layout_media_horiz"/>
                        </com.facebook.shimmer.ShimmerFrameLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_recommendation"
                            style="@style/RecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="16dp"/>
                    </FrameLayout>
                </RelativeLayout>
...
