...
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_alignParentTop="true"
                android:background="@color/blue" />

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
...
                    app:chipSpacingHorizontal="8dp"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_all"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        android:textAppearance="@style/MyTextAppearance" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_movie"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie"
                        android:textAppearance="@style/MyTextAppearance" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_tv"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv"
                        android:textAppearance="@style/MyTextAppearance" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                style="@style/RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sv_category"
                android:paddingHorizontal="16dp"
                android:paddingBottom="48dp" />
...
                    android:textSize="@dimen/font_nm" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_option"
        style="@style/FloatingActionButton.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
...
