...
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:targetApi="o">

    <item
        android:id="@+id/menu_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie"
        android:color="@color/blue"
        android:checked="true" />

    <item
        android:id="@+id/menu_tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/tv"
        android:color="@color/blue" />

    <item
        android:id="@+id/menu_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/discover"
        android:color="@color/blue" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/favorite"
        android:color="@color/blue" />
</menu>
